Made scrollbar fixed.

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -121,6 +121,15 @@ body {
 				}
 			}
 		}
+
+		&.sidebarfixed {
+			position: fixed;
+			top: 6px;
+
+			#search {
+				margin-top: 0;
+			}
+		}
 	}
 }
 article:not(.articles) {
